--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <script src="tree.js"></script>
       <script src="Mango.js"></script>
       <script src="Ground.js"></script>
+      <script src="Stone.js"></script>
+      <script src="Launcher.js"></script>
 
     </head>
     <body>
